- Pequeñas correcciones para dar soporte a PHP 8.4. - Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -56,6 +56,7 @@
     "add-file": "Datei hinzufügen",
     "add-invoices": "Rechnungen hinzufügen",
     "add-new-plugin": "Neues Plugin hinzufügen",
+    "add-user": "Benutzer hinzufügen",
     "additional-text": "Zusatztext",
     "address": "Adresse",
     "addresses": "Adressen",
@@ -212,6 +213,7 @@
     "card": "Karte",
     "carrier": "Träger",
     "carriers": "Träger",
+    "cart": "Warenkorb",
     "cash": "Bar",
     "categories": "Kategorien",
     "category": "Kategorie",
@@ -279,8 +281,10 @@
     "companies": "Firmen",
     "company": "Unternehmen",
     "company-commission-info": "Es wird nur für das ausgewählte Unternehmen angewendet",
+    "company-iban-changed": "Die IBAN des Bankkontos %account% wurde geändert. Früher war es %old% und jetzt ist es %new%.",
     "company-manager": "Firmenleiter",
     "company-name": "Name der Firma",
+    "company-tax": "Körperschaftsteuervorschriften",
     "company-warehouse": "Unternehmen\/Lager",
     "comparative": "Vergleich",
     "compared": "verglichen",
@@ -503,7 +507,7 @@
     "email": "E-Mail",
     "email-bcc": "Blindkopie-E-Mail",
     "email-cc": "Email mit Kopie",
-    "email-not-configured": "E-Mail nicht konfiguriert. Sie können die E-Mail über das Administratormenü, Systemsteuerung, Anwendungseinstellungen konfigurieren.",
+    "email-not-configured": "E-Mail nicht konfiguriert. Sie können die E-Mail über das Administratormenü, E-Mail, konfigurieren.",
     "email-not-sent": "nicht gesendet",
     "email-notification": "E-Mail Benachrichtigung",
     "email-notification-disabled": "Die E-Mail-Benachrichtigung %name% ist deaktiviert",
@@ -528,6 +532,7 @@
     "enabled-plugins": "Aktivierte Plugins",
     "encrypt": "Verschlüsseln",
     "end-date": "Endtermin",
+    "end-month": "Endmonat",
     "end-time": "Endzeit",
     "epigraph": "Epigraph",
     "epigraph-group": "Epigraph-Gruppe",
@@ -606,7 +611,7 @@
     "field-required": "Erforderliches Feld: %field%",
     "fields": "Felder",
     "file": "archivieren",
-    "file-audio-codec-not-accepted": "Fehler beim Senden der Audiodatei %fileName%, da der Codec %codec% nicht zulässig ist. Zulässige Codecs sind: %supported%",
+    "file-audio-codec-not-accepted": "Fehler beim Senden der Audiodatei %fileName%, da der Codec %codec% nicht erlaubt ist. Zulässige Codecs sind: %supported%",
     "file-extension-not-accepted": "Fehler beim Senden der Datei %fileName%, da ihre Erweiterung nicht erlaubt ist. Erlaubte Erweiterungen sind: %accepted%",
     "file-name": "Dateiname",
     "file-not-exists": "Datei existiert nicht: %fileName%",
@@ -620,6 +625,7 @@
     "filecache-get-key-item": "Getted-Element '0' aus dem Filecache.",
     "filecache-set-key-item": "Setze das Element '0' auf den Filecache.",
     "files": "Aufzeichnungen",
+    "filter": "F",
     "filter-method": "Filtermethode",
     "filter-records-containing-indicated-value": "Datensätze filtern, die den angegebenen Wert enthalten",
     "filters": "Filter",
@@ -929,6 +935,7 @@
     "manufacturer": "Hersteller",
     "manufacturer-code": "Hersteller Code",
     "manufacturers": "Hersteller",
+    "manufacturing": "Herstellung",
     "march": "März",
     "margin": "Rand",
     "margin-top": "Rand oben",
@@ -940,7 +947,7 @@
     "maximum-amount-without-cifnif": "M",
     "maximum-stock": "Höchstbestand",
     "may": "Mai",
-    "media-whatsapp-not-upload": "Fehler beim Hochladen der Mediendatei auf den WhatsApp-Server: %file%",
+    "media-whatsapp-not-upload": "Fehler beim Hochladen der Medien datei auf den WhatsApp-Server: %file%",
     "mega-search": "MegaSuchmaschine",
     "memcache": "Memcache 0",
     "memcache-clear": "Memcache klärte sich.",
@@ -1122,6 +1129,7 @@
     "payment-method": "Bezahlverfahren",
     "payment-methods": "Zahlungsarten",
     "payments": "Zahlungen",
+    "paypal": "PayPal",
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "% Zuschlag",
@@ -1197,6 +1205,7 @@
     "print-list-of-records": "Liste der Datensätze drucken",
     "print-price": "Preise drucken",
     "print-quantity": "Druckmenge",
+    "print-ticket": "Ticket drucken",
     "printed": "gedruckt",
     "printing-format": "Druckformat",
     "printing-formats": "Druckformate",
@@ -1323,6 +1332,7 @@
     "rules": "Regeln",
     "run": "Ausführen",
     "running-plugin-cron": "Führe FacturaScripts Cron für das Plugin %pluginName% aus",
+    "running-work-queue": "Die Arbeitsereignisschleife wird ausgeführt",
     "sales": "Der Umsatz",
     "sales-invoice": "Verkaufsrechnung",
     "sales-rate": "Verkaufsrate",
@@ -1342,7 +1352,7 @@
     "second-trimester": "Zweites Trimester",
     "select": "Auswählen",
     "select-all": "Alle auswählen",
-    "select-content-for": "Wählen Sie Inhalt für %content% aus",
+    "select-content-for": "Wählen Sie Inhalt für %content% aus.",
     "select-none": "Keine Auswahl treffen",
     "select-plugin-zip-file": "Wählen Sie die Plugin-Zip-Datei:",
     "select-user": "Benutzer auswählen",
@@ -1427,6 +1437,7 @@
     "start": "Start",
     "start-date": "Anfangsdatum",
     "start-hour": "Startzeit",
+    "start-month": "Startmonat",
     "start-time": "Startzeit",
     "starting-cron": "Ab FacturaScripts Cron...",
     "state": "Zustand",
@@ -1478,6 +1489,7 @@
     "supplier-estimation": "Lieferanten-Kostenvoranschlag",
     "supplier-estimations": "Lieferanten-Kostenvoranschläge",
     "supplier-have-no-iban": "Der Lieferant %%supplier hat keine IBAN (Bankkonto)",
+    "supplier-iban-changed": "Der IBAN des Kontos des Lieferanten %codproveider% wurde geändert. Er war vorher %old% und ist jetzt %new%.",
     "supplier-invoice": "Lieferantenrechnung",
     "supplier-invoice-deleted-successfully": "Kaufrechnung 0 wurde erfolgreich gelöscht.",
     "supplier-invoices": "Lieferantenrechnungen",
@@ -1550,6 +1562,7 @@
     "total": "Gesamt",
     "total-amount": "Gesamtbetrag",
     "total-cost": "Gesamtkosten",
+    "total-pending": "Ausstehender Gesamtbetrag",
     "total-purchases": "Gesamteinkäufe",
     "total-sales": "Gesamtverkäufe",
     "total-value-error": "Gesamtmenge von 0 1 falsch (2). Richtige Menge: 3",
@@ -1601,6 +1614,7 @@
     "update-supplier-prices": "aktullieren Lieferantenpreise",
     "update-time": "Aktuallierungszeit",
     "updated-model": "Aktualisiert %model% (%key%) %desc%",
+    "updated-records": "%updatedRecords% von %totalRecords% Datensätzen wurden aktualisiert",
     "updater": "Updater",
     "updates-available": "Verfügbare Updates",
     "updates-available-p": "Es gibt verfügbare Updates für FacturaScripts. Bitte klicken Sie auf den Aktualisierer und laden Sie die neue Version herunter. Die Updates beheben Fehler und fügen neue Funktionen hinzu.",
@@ -1619,7 +1633,7 @@
     "valid-for-day": "Gültig für einen Tag",
     "validate": "bestätigen",
     "validate-iban": "IBAN bestätigen",
-    "validate-whatsapp-not-connection": "Fehler bei der Validierung der WhatsApp-Nummer, keine Verbindung zum WhatsApp-Server möglich",
+    "validate-whatsapp-not-connection": "Fehler bei der Validierung der WhatsApp-Nummer, keine Verbindung zum WhatsApp-Server möglich.",
     "valuation-type": "Bewertungsart",
     "value": "Wert",
     "value-x": "Wert-x",
@@ -1651,6 +1665,7 @@
     "warehouses": "Lagerhallen",
     "warning": "<b>Warnung<\/b>",
     "warnings": "Warnungen",
+    "weak-password": "Das Passwort muss mindestens 8 Zeichen lang sein und Zahlen sowie Buchstaben enthalten.",
     "web": "web:",
     "website": "Webseite",
     "wednesday": "Mittwoch",
@@ -1693,5 +1708,6 @@
     "your": "Ihr",
     "zip-code": "Postleitzahl",
     "zip-codes": "Postleitzahlen",
-    "zip-error-wrong-structure": "zip Fehler falsche Struktur"
+    "zip-error-wrong-structure": "zip Fehler falsche Struktur",
+    "zone": "Zone"
 }
