--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -56,6 +56,7 @@
     "add-file": "Fitxategi bat gehitu",
     "add-invoices": "Gehitu fakturak",
     "add-new-plugin": "Plugin berria gehitu",
+    "add-user": "Erabiltzaile bat gehitu",
     "additional-text": "Testu gehigarria",
     "address": "Helbidea",
     "addresses": "Helbideak",
@@ -212,6 +213,7 @@
     "card": "Txartela",
     "carrier": "Garraiolaria",
     "carriers": "Garraiolariak",
+    "cart": "Orga",
     "cash": "Eskudirua",
     "categories": "Kategoriak",
     "category": "Kategoria",
@@ -279,8 +281,10 @@
     "companies": "Enpresak",
     "company": "Enpresa",
     "company-commission-info": "Aukeratutako enpresari bakarrik aplikatuko zaio",
+    "company-iban-changed": "%account% banku kontuaren iban-a aldatu da. Lehen %old% zen eta orain %new% da.",
     "company-manager": "Enpresa kudeatzailea",
     "company-name": "Enpresaren izena",
+    "company-tax": "Sozialen gaineko zerga",
     "company-warehouse": "Enpresa\/Gordailua",
     "comparative": "Konparatiboa",
     "compared": "Konparatuta",
@@ -312,7 +316,7 @@
     "conversion-rate-not-0": "Bihurketa tasa ezin du 0 izan.",
     "convert-into-customer": "Bezero bihurtu",
     "convert-into-supplier": "Hornitzaile bihurtu",
-    "cookies": "Cookieak",
+    "cookies": "Cookie-ak",
     "copy": "Kopiatu",
     "copy-p": "Bete formularioa eredu honen kopia bat egiteko",
     "copy-subaccounts": "Kontabilitate plana kopiatu",
@@ -503,7 +507,7 @@
     "email": "Posta elektronikoa",
     "email-bcc": "Emaila Kopia Eskutuarekin",
     "email-cc": "Emaila Karboi Kopiarekin",
-    "email-not-configured": "Posta elektronikoa konfiguratu gabe dago. Administratzailea, kontrol panela, aplikazioaren lehentasunak menutik ahal duzu konfiguratu.",
+    "email-not-configured": "Posta elektronikoa konfiguratu gabe dago. Administratzailearen menutik emaila konfiguratu dezakezu.",
     "email-not-sent": "Bidali gabe",
     "email-notification": "Email Jakinarazpena",
     "email-notification-disabled": "Email jakinarazpena %name% desgaituta dago",
@@ -528,6 +532,7 @@
     "enabled-plugins": "Plugin aktiboak",
     "encrypt": "Enkriptatzea",
     "end-date": "Amaiera data",
+    "end-month": "Amaitzeko hilabetea",
     "end-time": "Amaierako ordua",
     "epigraph": "Epigrafea",
     "epigraph-group": "Epigrafe taldea",
@@ -606,7 +611,7 @@
     "field-required": "Beharrezko eremua: %field%",
     "fields": "Eremuak",
     "file": "Artxiboa",
-    "file-audio-codec-not-accepted": "Errore bat gertatu da %fileName% audio-fitxategia bidaltzean, %codec% kodeak ez baitu onartzen. Onartutako kodeak hauek dira: %supported%",
+    "file-audio-codec-not-accepted": "Errorea gertatu da %fileName% audio-fitxategia bidaltzean, %codec% kodeak ez baitu onartzen. Onartutako kodeak hauek dira: %supported%",
     "file-extension-not-accepted": "Errorea fitxategia bidaltzerakoan %fileName%-en extensioa ez dela onartua. Onartutako extensioak hauek dira: %accepted%",
     "file-name": "Artxiboaren izena",
     "file-not-exists": "%fileName% artxiboa ez da existitzen",
@@ -620,6 +625,7 @@
     "filecache-get-key-item": "Filecache-tik '%item%' elementua eskuratu da.",
     "filecache-set-key-item": "'%item%' elementua Filecache-ra esleituta.",
     "files": "Artxiboak",
+    "filter": "Iragazi",
     "filter-method": "Iragazki metodoa",
     "filter-records-containing-indicated-value": "Iragazi adierazitako balioa duten erregistroak",
     "filters": "Iragazkiak",
@@ -929,7 +935,8 @@
     "manufacturer": "Fabrikatzailea",
     "manufacturer-code": "Fabrikatzailearen kodea",
     "manufacturers": "Fabrikatzaileak",
-    "march": "Martxo",
+    "manufacturing": "Fabrikazioa",
+    "march": "Martxo.",
     "margin": "Marjina",
     "margin-top": "Goiko marjina",
     "mark-as-homepage": "Hasierako orria ezarri",
@@ -940,7 +947,7 @@
     "maximum-amount-without-cifnif": "Gehieneko zenbatekoa IFK\/IFZ gabe",
     "maximum-stock": "Stock maximoa",
     "may": "Maiatza",
-    "media-whatsapp-not-upload": "Errorea multimedia fitxategia WhatsApp zerbitzarian igoan: %file%",
+    "media-whatsapp-not-upload": "Errorea multimedia fitxategia WhatsApp zerbitzari gunean igoan: %file%",
     "mega-search": "MegaBilaketa",
     "memcache": "Memcache",
     "memcache-clear": "Memcache garbituta.",
@@ -1122,6 +1129,7 @@
     "payment-method": "Ordainketa modua",
     "payment-methods": "Ordainketa moduak",
     "payments": "Ordainketak",
+    "paypal": "PayPal",
     "pct": "%",
     "pct-irpf": "PFEZ %",
     "pct-surcharge": "Gainkargu %",
@@ -1138,7 +1146,7 @@
     "percentage-vat": "BEZ %",
     "period": "Denboraldia",
     "personalized": "Pertsonalizatua",
-    "pgsql-endpoint": "PostgreSQL amaiera",
+    "pgsql-endpoint": "PostgreSQL amaiera.",
     "pgsql-ssl-mode": "PostgreSQL SSL modua",
     "phase": "Fasea",
     "phone": "Telefonoa",
@@ -1197,6 +1205,7 @@
     "print-list-of-records": "Inprimatu erregistroen zerrenda",
     "print-price": "Prezioak inprimatu",
     "print-quantity": "Kantitatea inprimatu",
+    "print-ticket": "Tiketa inprimatu",
     "printed": "Inprimakia",
     "printing-format": "Inprimatze formatua",
     "printing-formats": "Inprimatze formatuak",
@@ -1323,6 +1332,7 @@
     "rules": "Arauak",
     "run": "Exekutatu",
     "running-plugin-cron": "FacturaScripts %pluginName% pluginaren cron exekutatzen",
+    "running-work-queue": "Lan ekitaldien ilara exekutatzen",
     "sales": "Salmentak",
     "sales-invoice": "Salmenta faktura",
     "sales-rate": "Salmenta-tasa",
@@ -1349,7 +1359,7 @@
     "selected-quantity": "Hautatutako kantitatea",
     "selector-number": "Hautatzailea",
     "send": "Bidali",
-    "send-anonymous-data": "Bidali datu anonimoak",
+    "send-anonymous-data": "Datu anonimoak bidali",
     "send-audios": "Bidali audioak",
     "send-documents": "Bidali dokumentuak",
     "send-images": "Bidali irudiak",
@@ -1427,6 +1437,7 @@
     "start": "Hasiera",
     "start-date": "Hasiera data",
     "start-hour": "Hasiera ordua",
+    "start-month": "Hasteko hilabetea",
     "start-time": "Hasiera ordua",
     "starting-cron": "FacturaScripts-en cron lana abiarazten...",
     "state": "Egoera",
@@ -1478,6 +1489,7 @@
     "supplier-estimation": "Hornitzaile aurrekontua",
     "supplier-estimations": "Hornitzaileen aurrekontuak",
     "supplier-have-no-iban": "Hornitzaileak %%iban-kontu bankurik ez du",
+    "supplier-iban-changed": "Hornitzailearen %codproveedor% banku kontuaren iban-a aldatu da. Lehen %old% zen eta orain %new% da.",
     "supplier-invoice": "Hornitzaile faktura",
     "supplier-invoice-deleted-successfully": "%docCode% erosketa faktura ondo ezabatu da.",
     "supplier-invoices": "Hornitzaileen fakturak",
@@ -1515,7 +1527,7 @@
     "tax-transport": "Garraioaren zergak",
     "taxes": "Zergak",
     "telemetry-data-to-send": "Erregistratutako instalazioek aldizka FacturaScripts-en bertsio, PHP, herrialdea, hizkuntza eta plugin zerrenden berri ematen dute.",
-    "telephone-prefix": "Telefono aurretikoa",
+    "telephone-prefix": "Telefono aurrizkia",
     "template": "Txantiloi",
     "template-error": "Txantiloi errorea",
     "template-not-found": "Ez da txantiloia aurkitu",
@@ -1537,7 +1549,7 @@
     "thousands-separator": "Milakoen banatzailea",
     "thursday": "Osteguna",
     "ticket": "Tiketa",
-    "tickets": "Tiketak",
+    "tickets": "Txartelak",
     "time": "Ordua",
     "timezone": "Ordu-zona",
     "title": "Izenburua",
@@ -1550,6 +1562,7 @@
     "total": "Totala",
     "total-amount": "Batuketa totala",
     "total-cost": "Kostu totala",
+    "total-pending": "Guztira zain",
     "total-purchases": "Erosketa totala",
     "total-sales": "Salmenta totala",
     "total-value-error": "%docType% %docCode% (%docTotal%) totala ez da zuzena. Total zuzena: %calcTotal%",
@@ -1601,6 +1614,7 @@
     "update-supplier-prices": "Hornitzaileen prezioak eguneratu",
     "update-time": "Eguneratze ordua",
     "updated-model": "%model% (%key%) %desc% Eguneratua",
+    "updated-records": "%updatedRecords% erregistro eguneratuak %totalRecords%-n",
     "updater": "Eguneratzailea",
     "updates-available": "Eguneratzeak eskuragarri",
     "updates-available-p": "FacturaScripts-en eguneratzeak eskuragarri daude. Mesedez, egin klik eguneratzaileetan eta deskargatu bertsio berria. Eguneratzeek akatsak zuzentzen dituzte eta funtzio berriak gehitzen dituzte.",
@@ -1619,7 +1633,7 @@
     "valid-for-day": "Egunerako baliozkotua",
     "validate": "Balioztatu",
     "validate-iban": "IBAN-a baieztatu",
-    "validate-whatsapp-not-connection": "WhatsApp zenbakia balioztatzen errore bat egon da, ezin izan da WhatsApp zerbitzariarekin konexioa ezarri.",
+    "validate-whatsapp-not-connection": "WhatsApp zenbakia balioztatzean errore bat gertatu da, ezin izan da WhatsApp zerbitzariarekin konexioa ezarri.",
     "valuation-type": "Balorazio mota",
     "value": "Balioa",
     "value-x": "X balioa",
@@ -1651,6 +1665,7 @@
     "warehouses": "Biltegiak",
     "warning": "Erne",
     "warnings": "Oharrak",
+    "weak-password": "Pasahitza gutxienez 8 karaktere izan behar ditu, zenbakiak eta letrez osatua.",
     "web": "Web",
     "website": "Webgunea",
     "wednesday": "Asteazkena",
@@ -1693,5 +1708,6 @@
     "your": "Zure",
     "zip-code": "Posta Kodea",
     "zip-codes": "Posta kodeak",
-    "zip-error-wrong-structure": "Zip-aren egitura okerra da. Pluginaren karpeta eta plugin bakarra izan behar ditu."
+    "zip-error-wrong-structure": "Zip-aren egitura okerra da. Pluginaren karpeta eta plugin bakarra izan behar ditu.",
+    "zone": "Eremua"
 }
