--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -56,6 +56,7 @@
     "add-file": "Ajouter un fichier",
     "add-invoices": "Ajouter factures",
     "add-new-plugin": "Ajouter un nouveau plugin",
+    "add-user": "Ajouter utilisateur",
     "additional-text": "Texte aditionnel",
     "address": "Adresse",
     "addresses": "Adresses",
@@ -212,6 +213,7 @@
     "card": "Carte",
     "carrier": "Transporteur",
     "carriers": "Les transporteurs",
+    "cart": "Panier",
     "cash": "Effectifs",
     "categories": "Categories",
     "category": "Categoria",
@@ -279,8 +281,10 @@
     "companies": "Entreprises",
     "company": "Compagnie",
     "company-commission-info": "Cela s'appliquera uniquement à l'entreprise sélectionnée",
+    "company-iban-changed": "L'IBAN du compte bancaire %account% a été changé. Avant, c'était %old% et maintenant c'est %new%",
     "company-manager": "Chef d'entreprise",
     "company-name": "Nom de la compagnie",
+    "company-tax": "Fiscalité des entreprises",
     "company-warehouse": "Entreprise\/Entrepôt",
     "comparative": "Comparatif",
     "compared": "Comparé à",
@@ -503,7 +507,7 @@
     "email": "Email",
     "email-bcc": "Mettre en copie invisible",
     "email-cc": "Mettre en copie",
-    "email-not-configured": "Les paramètres de messagerie électronique ne sont pas configurés. Vous pouvez le faire depuis le menu Administration > Panneau de contrôle > Préférences de l'application",
+    "email-not-configured": "Email non configuré. Vous pouvez configurer l'email depuis le menu Administrateur, Email.",
     "email-not-sent": "Non envoyé",
     "email-notification": "Notification par email",
     "email-notification-disabled": "La notification par email %name% est désactivée",
@@ -528,6 +532,7 @@
     "enabled-plugins": "Plugins activés",
     "encrypt": "Chiffrement",
     "end-date": "Date de fin",
+    "end-month": "Mois de fin",
     "end-time": "Heure de fin",
     "epigraph": "Épigraphe",
     "epigraph-group": "Groupe épigraphique",
@@ -620,6 +625,7 @@
     "filecache-get-key-item": "Élément '%item%' obtenu de Filecache.",
     "filecache-set-key-item": "Réglé l'élément '%item%' à Filecache.",
     "files": "Fichiers",
+    "filter": "Filtrer",
     "filter-method": "Méthode de filtrage",
     "filter-records-containing-indicated-value": "Filtrer les enregistrements contenant la valeur indiquée",
     "filters": "Filtres",
@@ -929,6 +935,7 @@
     "manufacturer": "Fabricant",
     "manufacturer-code": "Code du fabricant",
     "manufacturers": "Fabricants",
+    "manufacturing": "Fabrication",
     "march": "Mars",
     "margin": "Marge",
     "margin-top": "Haut de la marge",
@@ -1122,6 +1129,7 @@
     "payment-method": "Mode de paiement",
     "payment-methods": "Méthodes de payement",
     "payments": "Paiements",
+    "paypal": "PayPal",
     "pct": "% pct",
     "pct-irpf": "% impôt sur le revenu",
     "pct-surcharge": "% Supplément",
@@ -1197,6 +1205,7 @@
     "print-list-of-records": "Imprimer la liste des enregistrements",
     "print-price": "Imprimir precios",
     "print-quantity": "Imprimir cantidad",
+    "print-ticket": "Imprimer le ticket",
     "printed": "Imprimé",
     "printing-format": "Format d'impression",
     "printing-formats": "Formats d'impression",
@@ -1323,6 +1332,7 @@
     "rules": "Règles",
     "run": "Exécuter",
     "running-plugin-cron": "Exécution de la tâche programmée pour le module %pluginName%",
+    "running-work-queue": "Exécution de la file d'attente des événements de travail",
     "sales": "Ventes",
     "sales-invoice": "Facture de vente",
     "sales-rate": "Taux de vente",
@@ -1427,6 +1437,7 @@
     "start": "Départ",
     "start-date": "Date de début",
     "start-hour": "Heure de début",
+    "start-month": "Mois de début",
     "start-time": "Heure de départ",
     "starting-cron": "Exécution des tâches programmées de FacturaScripts ...",
     "state": "Etat",
@@ -1478,6 +1489,7 @@
     "supplier-estimation": "Devis fournisseur",
     "supplier-estimations": "Budgets des fournisseurs",
     "supplier-have-no-iban": "Le fournisseur %supplier% n'a pas d'IBAN (compte bancaire)",
+    "supplier-iban-changed": "L'IBAN du compte bancaire du fournisseur %codproveedor% a été modifié. Avant, c'était %old% et maintenant c'est %new%.",
     "supplier-invoice": "Facture fournisseur",
     "supplier-invoice-deleted-successfully": "La facture d'achat %docCode% a été supprimée avec succès.",
     "supplier-invoices": "Factures fournisseurs",
@@ -1550,6 +1562,7 @@
     "total": "Total",
     "total-amount": "Montant total",
     "total-cost": "Coût total",
+    "total-pending": "Total en attente",
     "total-purchases": "Total des achats",
     "total-sales": "Total des ventes",
     "total-value-error": "Montant total de %docType% %docCode% incorrect (%docTotal%). Montant correct: %calcTotal%",
@@ -1601,6 +1614,7 @@
     "update-supplier-prices": "Mise à jour des prix fournisseurs",
     "update-time": "Heure de mise à jour",
     "updated-model": "%model% (%key%) %desc% mis à jour",
+    "updated-records": "Les enregistrements %updatedRecords% de %totalRecords% ont été mis à jour.",
     "updater": "Processus de mise à jour",
     "updates-available": "Mises à jour disponibles",
     "updates-available-p": "Des mises à jour d'InfacturaScripts sont disponibles. Veuillez cliquer sur le programme de mise à jour et télécharger la nouvelle version. Les mises à jour corrigent les bugs et ajoutent de nouvelles fonctionnalités.",
@@ -1651,6 +1665,7 @@
     "warehouses": "Entrepôts",
     "warning": "Avertissement",
     "warnings": "Avis",
+    "weak-password": "Le mot de passe doit comporter au moins 8 caractères, incluant des chiffres et des lettres.",
     "web": "Web",
     "website": "Site Internet",
     "wednesday": "Mercredi",
@@ -1693,5 +1708,6 @@
     "your": "Votre",
     "zip-code": "Code postal",
     "zip-codes": "Codes postaux",
-    "zip-error-wrong-structure": "Erreur dans la structure du fichier ZIP. Il doit contenir le dossier du module externe, et un seul module."
+    "zip-error-wrong-structure": "Erreur dans la structure du fichier ZIP. Il doit contenir le dossier du module externe, et un seul module.",
+    "zone": "Zone"
 }
