--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -56,6 +56,7 @@
     "add-file": "Engadir arquivo",
     "add-invoices": "Engadir facturas",
     "add-new-plugin": "Engadir novo complemento",
+    "add-user": "Engadir usuario",
     "additional-text": "Texto adicional",
     "address": "Enderezo",
     "addresses": "Direccións",
@@ -212,6 +213,7 @@
     "card": "Tarxeta",
     "carrier": "Transportista",
     "carriers": "Transportistas",
+    "cart": "Carriño",
     "cash": "Efectivo",
     "categories": "Categorias",
     "category": "Categoría",
@@ -279,8 +281,10 @@
     "companies": "Empresas",
     "company": "Empresa",
     "company-commission-info": "Só se aplicará á empresa seleccionada",
+    "company-iban-changed": "Cambiouse o IBAN da conta bancaria %account%. Antes era %old% e agora é %new%",
     "company-manager": "Xerente de empresa",
     "company-name": "Nome da empresa",
+    "company-tax": "Imposto de sociedades",
     "company-warehouse": "Empresa\/Almacén",
     "comparative": "Comparativo",
     "compared": "Comparado",
@@ -503,7 +507,7 @@
     "email": "Correo electrónico",
     "email-bcc": "Correo con Copia Oculta",
     "email-cc": "Correo con copia",
-    "email-not-configured": "Email non configurado. Podes configurar ou email desde ou menú administrador, panel de control, preferencias de aplicación.",
+    "email-not-configured": "Email non configurado. Podes configurar o email desde o menú administrador, email.",
     "email-not-sent": "Non enviado",
     "email-notification": "Notificación por email",
     "email-notification-disabled": "A notificación do email %name% está desactivada",
@@ -528,6 +532,7 @@
     "enabled-plugins": "Plugins activos",
     "encrypt": "Encriptación",
     "end-date": "Data de finalización",
+    "end-month": "Mes de fin",
     "end-time": "Hora de remate",
     "epigraph": "Epígrafe",
     "epigraph-group": "Grupo de epígrafos",
@@ -620,6 +625,7 @@
     "filecache-get-key-item": "Elemento descargado '%item%' de Filecache.",
     "filecache-set-key-item": "Elemento asignado '%item%' para Filecache.",
     "files": "Arquivos",
+    "filter": "Filtrar",
     "filter-method": "Método de filtro",
     "filter-records-containing-indicated-value": "Filtrar rexistros que conteñan valor indicado",
     "filters": "Filtros",
@@ -929,11 +935,12 @@
     "manufacturer": "Fabricante",
     "manufacturer-code": "Código do fabricante",
     "manufacturers": "Fabricantes",
+    "manufacturing": "Fabricación",
     "march": "Marzo",
     "margin": "Marxe",
     "margin-top": "Marxe superior",
     "mark-as-homepage": "Marcar como páxina de inicio",
-    "marked-as-homepage": "Marcado como páxina de inicio. Pulsa de novo para desmarcar.",
+    "marked-as-homepage": "Marcado como páxina de inicio. Preme de novo para desmarcar.",
     "max-input-vars-warning": "Coa configuración actual de PHP (max_input_vars) non poderás traballar con documentos de máis de %numlines% líneas.",
     "max-risk": "Risco máximo",
     "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
@@ -1004,11 +1011,11 @@
     "negative-balance": "Saldo Negativo",
     "net": "Neto",
     "new": "Novo",
-    "new-acc-entry-line-p": "Podes introducir unha liña escribindo o código da  subconta debaixo ou pulsando o botón  subcontas e seleccionando unha  subconta.",
+    "new-acc-entry-line-p": "Podes introducir unha liña escribindo o código da subconta debaixo ou premendo o botón subcontas e seleccionando unha subconta.",
     "new-address": "Nova tradución",
     "new-customer": "novo cliente",
     "new-customers": "Novos clientes",
-    "new-invoice-line-p": "Podes engadir un produto pulsando o botón produto ou escribindo a súa referencia ou código de barras no campo código de barras. Ou pulsa o botón liña para unha liña sen produto.",
+    "new-invoice-line-p": "Podes engadir un produto premendo o botón produto ou escribindo a súa referencia ou código de barras no campo código de barras. Ou preme o botón liña para unha liña sen produto.",
     "new-password": "Novo contrasinal",
     "new-price": "Novo prezo",
     "new-refund": "Nova devolución",
@@ -1122,6 +1129,7 @@
     "payment-method": "Método de pagamento",
     "payment-methods": "Métodos de pagamento",
     "payments": "Pagos",
+    "paypal": "PayPal",
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "% Recargo",
@@ -1197,6 +1205,7 @@
     "print-list-of-records": "Imprimir lista de rexistros",
     "print-price": "Imprimir prezos",
     "print-quantity": "Imprimir cantidade",
+    "print-ticket": "Imprimir ticket",
     "printed": "Impreso",
     "printing-format": "Formato de impresión",
     "printing-formats": "Formatos de impresión",
@@ -1275,7 +1284,7 @@
     "register-installation-p": "Rexistre a súa instalación para poder actualizar plugins de pago ou privados",
     "register-symbol": "#",
     "registered-installation": "Instalación rexistrada #%number%",
-    "registered-installation-p": "Esta instalación xa foi rexistrada. Se tes  plugins de pago, pulsa o botón administrar para vinculalos e poder actualizar.",
+    "registered-installation-p": "Esta instalación xa foi rexistrada. Se tes plugins de pago, preme o botón administrar para vinculalos e poder actualizar.",
     "regularization-operation": "Regularización",
     "reject": "Rexeitar",
     "rejected": "Rexeitado",
@@ -1323,6 +1332,7 @@
     "rules": "Reglas",
     "run": "Executar",
     "running-plugin-cron": "Executando cron do plugin %pluginName%",
+    "running-work-queue": "Executando a cola de eventos de traballo",
     "sales": "Vendas",
     "sales-invoice": "Factura de venda",
     "sales-rate": "Taxa de vendas",
@@ -1427,6 +1437,7 @@
     "start": "Inicio",
     "start-date": "Data de inicio",
     "start-hour": "Hora de inicio",
+    "start-month": "Mes de inicio",
     "start-time": "Hora de comezo",
     "starting-cron": "Iniciando cron de FacturaScripts...",
     "state": "Estado",
@@ -1478,6 +1489,7 @@
     "supplier-estimation": "Orzamento de provedor",
     "supplier-estimations": "Estimacións de provedores",
     "supplier-have-no-iban": "O provedor %supplier% non ten IBAN (conta bancaria)",
+    "supplier-iban-changed": "Cambiouse o IBAN da conta bancaria do provedor %codproveedor%. Antes era %old% e agora é %new%",
     "supplier-invoice": "Factura de provedor",
     "supplier-invoice-deleted-successfully": "A factura de compra %docCode% foi eliminada con éxito.",
     "supplier-invoices": "Facturas do provedor",
@@ -1550,6 +1562,7 @@
     "total": "Total",
     "total-amount": "Suma total",
     "total-cost": "Custo total",
+    "total-pending": "Total pendente",
     "total-purchases": "Total compras",
     "total-sales": "Total vendas",
     "total-value-error": "Valor total de %docType% %docCode% incorrecto (%docTotal%). Valor correcto: %calcTotal%",
@@ -1601,6 +1614,7 @@
     "update-supplier-prices": "Actualizar prezos provedores",
     "update-time": "hora de actualización",
     "updated-model": "Actualizado %model% (%key%) %desc%",
+    "updated-records": "Actualizáronse %updatedRecords% rexistros de %totalRecords%",
     "updater": "Actualizador",
     "updates-available": "Actualizacións dispoñibles",
     "updates-available-p": "Hai actualizacións dispoñibles de FacturaScripts. Por favor, fai clic no actualizador e descarga a nova versión. As actualizacións corrixen fallos e engaden novas funcionalidades.",
@@ -1651,6 +1665,7 @@
     "warehouses": "Almacéns",
     "warning": "Atención",
     "warnings": "Avisos",
+    "weak-password": "A contrasinal debe ter polo menos 8 caracteres, con números e letras.",
     "web": "Web",
     "website": "Sitio web",
     "wednesday": "Mércores",
@@ -1693,5 +1708,6 @@
     "your": "seu",
     "zip-code": "Código postal",
     "zip-codes": "Códigos postais",
-    "zip-error-wrong-structure": "A estructura do zip é incorreta. Debe conter a carpeta do plugin e só un plugin."
+    "zip-error-wrong-structure": "A estructura do zip é incorreta. Debe conter a carpeta do plugin e só un plugin.",
+    "zone": "Zona"
 }
