--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -56,6 +56,7 @@
     "add-file": "Aggiungi file",
     "add-invoices": "Aggiungi fatture",
     "add-new-plugin": "Aggiungi un nuovo plug-in",
+    "add-user": "Aggiungi utente",
     "additional-text": "Testo aggiuntivo",
     "address": "Indirizzo",
     "addresses": "indirizzi",
@@ -212,6 +213,7 @@
     "card": "Carta",
     "carrier": "Vettore",
     "carriers": "I vettori",
+    "cart": "Carrello",
     "cash": "Contanti",
     "categories": "Categorie",
     "category": "Categoria",
@@ -279,8 +281,10 @@
     "companies": "Aziende",
     "company": "Azienda",
     "company-commission-info": "Si applicherà solo all'azienda selezionata",
+    "company-iban-changed": "È stato cambiato l'IBAN del conto bancario %account%. Prima era %old% e ora è %new%",
     "company-manager": "Direttore aziendale",
     "company-name": "Nome della ditta",
+    "company-tax": "Imposta sulle società",
     "company-warehouse": "Azienda\/Magazzino",
     "comparative": "comparativo",
     "compared": "comparato",
@@ -503,7 +507,7 @@
     "email": "e-mail",
     "email-bcc": "Email Copia Conoscenza Nascosta",
     "email-cc": "Email Copia Conoscenza",
-    "email-not-configured": "Email non configurata",
+    "email-not-configured": "Email non configurato. Puoi configurare l'email dal menu amministratore, email.",
     "email-not-sent": "Non inviato",
     "email-notification": "Notifica via email",
     "email-notification-disabled": "La notifica email di %name% è disabilitata",
@@ -528,6 +532,7 @@
     "enabled-plugins": "Plugin attivi",
     "encrypt": "Crittazione",
     "end-date": "Data di fine",
+    "end-month": "Mese di fine",
     "end-time": "tempo finale",
     "epigraph": "Epigrafe",
     "epigraph-group": "Gruppo epigrafico",
@@ -620,6 +625,7 @@
     "filecache-get-key-item": "Elemento gettato '0' da Filecache.",
     "filecache-set-key-item": "Elemento settato '0' a Filecache.",
     "files": "record",
+    "filter": "Filtro",
     "filter-method": "Metodo di filtro",
     "filter-records-containing-indicated-value": "Filtra i record che contengono il valore indicato",
     "filters": "Filtri",
@@ -929,6 +935,7 @@
     "manufacturer": "fabbricante",
     "manufacturer-code": "Codice produttore",
     "manufacturers": "Produttori",
+    "manufacturing": "Manifattura",
     "march": "marzo",
     "margin": "margine",
     "margin-top": "Margine superiore",
@@ -1122,6 +1129,7 @@
     "payment-method": "Metodo di pagamento",
     "payment-methods": "Modalità di pagamento",
     "payments": "Pagamenti",
+    "paypal": "PayPal",
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "% Sovrapprezzo",
@@ -1197,6 +1205,7 @@
     "print-list-of-records": "Stampa l'elenco dei record",
     "print-price": "Stampa prezzi",
     "print-quantity": "Stampare quantità",
+    "print-ticket": "Stampa biglietto",
     "printed": "Stampato",
     "printing-format": "Formato di stampa",
     "printing-formats": "Formati di stampa",
@@ -1323,6 +1332,7 @@
     "rules": "Regole",
     "run": "eseguire",
     "running-plugin-cron": "Esecuzione del cron del plugin %pluginName%",
+    "running-work-queue": "Esecuzione della coda degli eventi di lavoro",
     "sales": "I saldi",
     "sales-invoice": "Fattura di vendita",
     "sales-rate": "Tasso di vendita",
@@ -1427,6 +1437,7 @@
     "start": "Inizio",
     "start-date": "Data d'inizio",
     "start-hour": "Ora di inizio",
+    "start-month": "Mese di inizio",
     "start-time": "inizio",
     "starting-cron": "A partire FacturaScripts Cron ...",
     "state": "Stato",
@@ -1478,6 +1489,7 @@
     "supplier-estimation": "Stima fornitore",
     "supplier-estimations": "Stime dei fornitori",
     "supplier-have-no-iban": "Il fornitore %supplier% non ha IBAN (conto bancario)",
+    "supplier-iban-changed": "È stato cambiato l'IBAN del conto bancario del fornitore %codproveedor%. Prima era %old% e ora è %new%",
     "supplier-invoice": "Fattura del Fornitore",
     "supplier-invoice-deleted-successfully": "La fattura di acquisto 0 è stata cancellata correttamente.",
     "supplier-invoices": "Fatture Fornitori",
@@ -1527,7 +1539,7 @@
     "texts": "testi",
     "third-quarter": "3° trimestre",
     "third-trimester": "Terzo trimestre",
-    "this-last-fortnight": "Ultimi 15 giorni",
+    "this-last-fortnight": "Gli ultimi 15 giorni",
     "this-last-month": "Questo ultimo mese",
     "this-last-week": "Ultima settimana",
     "this-last-year": "Ultimo anno",
@@ -1550,6 +1562,7 @@
     "total": "Totale",
     "total-amount": "somma totale",
     "total-cost": "Costo totale",
+    "total-pending": "Totale in sospeso",
     "total-purchases": "Acquisti totali",
     "total-sales": "Vendite totali",
     "total-value-error": "Quantità totale di 0 1 non corretta (2). Importo corretto: 3",
@@ -1601,6 +1614,7 @@
     "update-supplier-prices": "aggiornamento dei prezzi dei fornitori",
     "update-time": "Orario di aggiornamento",
     "updated-model": "Aggiornato %model% (%key%) %desc%",
+    "updated-records": "Sono stati aggiornati %updatedRecords% record su %totalRecords%",
     "updater": "Updater",
     "updates-available": "Aggiornamenti disponibili",
     "updates-available-p": "Sono disponibili aggiornamenti per FacturaScripts. Si prega di fare clic sull'aggiornatore e scaricare la nuova versione. Gli aggiornamenti correggono errori e aggiungono nuove funzionalità.",
@@ -1619,7 +1633,7 @@
     "valid-for-day": "Valido per un giorno",
     "validate": "Convalida",
     "validate-iban": "Validare IBAN",
-    "validate-whatsapp-not-connection": "Errore nella validazione del numero di WhatsApp, impossibile stabilire una connessione con il server di WhatsApp",
+    "validate-whatsapp-not-connection": "Errore nella validazione del numero di WhatsApp, impossibile stabilire una connessione con il server WhatsApp",
     "valuation-type": "Tipo di valutazione",
     "value": "Valore",
     "value-x": "valore X",
@@ -1651,6 +1665,7 @@
     "warehouses": "magazzini",
     "warning": "Attenzione",
     "warnings": "Avvisi",
+    "weak-password": "La password deve avere almeno 8 caratteri, con numeri e lettere.",
     "web": "web:",
     "website": "Sito web",
     "wednesday": "Mercoledì",
@@ -1693,5 +1708,6 @@
     "your": "Il tuo",
     "zip-code": "Cap",
     "zip-codes": "Codici postali",
-    "zip-error-wrong-structure": "La struttura del file ZIP è incorretta. Può contenere solamente la cartella del plugin e solamente un plugin."
+    "zip-error-wrong-structure": "La struttura del file ZIP è incorretta. Può contenere solamente la cartella del plugin e solamente un plugin.",
+    "zone": "Zona"
 }
