--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -56,6 +56,7 @@
     "add-file": "Přidat soubor",
     "add-invoices": "Añadir facturas",
     "add-new-plugin": "Añadir nuevo plugin",
+    "add-user": "Přidat uživatele",
     "additional-text": "Texto adicional",
     "address": "Adresa",
     "addresses": "Adresy",
@@ -212,6 +213,7 @@
     "card": "Tarjeta",
     "carrier": "Transportista",
     "carriers": "Transportistas",
+    "cart": "Carrito",
     "cash": "Efectivo",
     "categories": "Categorias",
     "category": "Categoría",
@@ -279,8 +281,10 @@
     "companies": "Empresas",
     "company": "Empresa",
     "company-commission-info": "Sólo se aplicará a la empresa seleccionada",
+    "company-iban-changed": "Byl změněn IBAN bankovního účtu %account%. Předtím byl %old% a nyní je %new%",
     "company-manager": "Administrador de la empresa",
     "company-name": "Nombre de empresa",
+    "company-tax": "Daň z příjmů právnických osob",
     "company-warehouse": "Společnost\/Sklad",
     "comparative": "Comparativo",
     "compared": "Comparado",
@@ -312,7 +316,7 @@
     "conversion-rate-not-0": "La tasa de conversión no puede ser 0.",
     "convert-into-customer": "Convertir en cliente",
     "convert-into-supplier": "Convertir en proveedor",
-    "cookies": "Cookies",
+    "cookies": "Souhlasy se soubory cookie",
     "copy": "Copiar",
     "copy-p": "Rellene el formulario para hacer una copia de este modelo",
     "copy-subaccounts": "Copiar plan contable",
@@ -503,7 +507,7 @@
     "email": "Email",
     "email-bcc": "Email con copia oculta",
     "email-cc": "Email con copia",
-    "email-not-configured": "E-mail není nakonfigurován. E-mail lze nakonfigurovat v administračním menu, e-mail.",
+    "email-not-configured": "E-mail není nakonfigurován. E-mail lze nakonfigurovat v administrativním menu, e-mail.",
     "email-not-sent": "No enviado",
     "email-notification": "Notificación por email",
     "email-notification-disabled": "Notifikace e-mailu %name% je vypnuta",
@@ -525,9 +529,10 @@
     "enable-api": "Activar API",
     "enable-updates-beta": "Activar actualizaciones beta",
     "enabled": "Activo",
-    "enabled-plugins": "Aktivované pluginy",
+    "enabled-plugins": "Aktivní pluginy",
     "encrypt": "Encriptación",
     "end-date": "Fecha de fin",
+    "end-month": "Konec měsíce",
     "end-time": "Hora finalización",
     "epigraph": "Epígrafe",
     "epigraph-group": "Grupo de Epígrafe",
@@ -620,6 +625,7 @@
     "filecache-get-key-item": "Obtenido elemento '%item%' from Filecache.",
     "filecache-set-key-item": "Asignado elemento '%item%' a Filecache.",
     "files": "Archivos",
+    "filter": "Filtr",
     "filter-method": "Método del filtro",
     "filter-records-containing-indicated-value": "Filtrar registros que contienen el valor",
     "filters": "Filtros",
@@ -716,7 +722,7 @@
     "grouping-type": "Agrupación",
     "groups": "Grupos",
     "has-attachments": "Má přílohy",
-    "has-parent": "Má rodiče",
+    "has-parent": "Má rodiče.",
     "hash": "Hash",
     "header": "Hlavička",
     "heading-account-group-id": "ID grupo epígrafes",
@@ -891,7 +897,7 @@
     "location": "Ubicación",
     "lock-accounting": "Bloquear contabilidad",
     "lock-entry": "Bloquear asiento",
-    "lock-invoice": "Uzamknout fakturu",
+    "lock-invoice": "Označit fakturu jako vydanou",
     "lock-unlock": "(Des)Bloquear",
     "lock-unlock-account-entry": "Bloquear\/Desbloquear el asiento contable",
     "locked": "Bloqueado",
@@ -929,6 +935,7 @@
     "manufacturer": "Fabricante",
     "manufacturer-code": "Código de fabricante",
     "manufacturers": "Fabricantes",
+    "manufacturing": "Fabricación",
     "march": "Březen",
     "margin": "Margen",
     "margin-top": "Márgen superior",
@@ -1122,6 +1129,7 @@
     "payment-method": "Forma de pago",
     "payment-methods": "Formas de pago",
     "payments": "Pagos",
+    "paypal": "PayPal",
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "% Recargo",
@@ -1155,7 +1163,7 @@
     "plugin-deleted": "Plugin %pluginName% ha sido eliminado correctamente.",
     "plugin-disabled": "El Plugin %pluginName% ha sido desactivado correctamente.",
     "plugin-enabled": "El Plugin %pluginName% ha sido activado correctamente.",
-    "plugin-file-too-big": "Tento server nepovoluje nahrávání souborů větších než %size% MB. Zvětšete prosím maximální velikost nahrávání souborů v PHP nebo zkopírujte soubor do složky Pluginy.",
+    "plugin-file-too-big": "Tento server nepovoluje nahrávání souborů větších než %size% MB. Zvětšete prosím maximální velikost nahrávání souborů v PHP nebo zkopírujte soubor do složky pluginy.",
     "plugin-installation-disabled": "La instalación de plugins está desactivada en este servidor",
     "plugin-installed": "Plugin '%pluginName%' instalado",
     "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
@@ -1171,7 +1179,7 @@
     "plugins": "Plugins",
     "plugins-p": "Los plugins permiten añadir nuevas funciones. Activa los que necesites ahora, o bien hazlo cuando quieras desde el menú administrador.",
     "points": "Puntos",
-    "points-of-interest": "Body zájmu",
+    "points-of-interest": "Body zájmu.",
     "port": "Puerto",
     "position": "Cargo",
     "positive-balance": "Saldo positivo",
@@ -1197,6 +1205,7 @@
     "print-list-of-records": "Imprimir lista de registros",
     "print-price": "Imprimir precios",
     "print-quantity": "Imprimir cantidad",
+    "print-ticket": "Imprimir ticket",
     "printed": "Impreso",
     "printing-format": "Formato de impresión",
     "printing-formats": "Formatos de impresión",
@@ -1323,6 +1332,7 @@
     "rules": "Reglas",
     "run": "Ejecutar",
     "running-plugin-cron": "Ejecutando cron del plugin %pluginName%",
+    "running-work-queue": "Probíhá zpracování událostí pracovního postupu",
     "sales": "Ventas",
     "sales-invoice": "Factura de venta",
     "sales-rate": "Tasa de ventas",
@@ -1427,6 +1437,7 @@
     "start": "Inicio",
     "start-date": "Fecha de inicio",
     "start-hour": "Hora de inicio",
+    "start-month": "Měsíc zahájení",
     "start-time": "Hora inicio",
     "starting-cron": "Iniciando cron de FacturaScripts...",
     "state": "Estado",
@@ -1478,6 +1489,7 @@
     "supplier-estimation": "Presupuesto de Proveedor",
     "supplier-estimations": "Presupuestos de proveedores",
     "supplier-have-no-iban": "Dodavatel %%supplier nemá IBAN (bankovní účet)",
+    "supplier-iban-changed": "Byl změněn IBAN bankovního účtu dodavatele %codprovezor%. Předtím to bylo %old% a nyní je to %new%",
     "supplier-invoice": "Factura de Proveedor",
     "supplier-invoice-deleted-successfully": "Factura de compra %docCode% ha sido eliminada correctamente.",
     "supplier-invoices": "Facturas de proveedores",
@@ -1515,7 +1527,7 @@
     "tax-transport": "Impuestos del transporte",
     "taxes": "Impuestos",
     "telemetry-data-to-send": "Las instalaciones registradas notifican periódicamente la versión de FacturaScripts, PHP, país, idioma y listado de plugins.",
-    "telephone-prefix": "Telefonní předpona",
+    "telephone-prefix": "Telefonní předpona.",
     "template": "Plantilla",
     "template-error": "Error en la plantilla",
     "template-not-found": "Plantilla no encontrada",
@@ -1550,6 +1562,7 @@
     "total": "Total",
     "total-amount": "Suma total",
     "total-cost": "Coste total",
+    "total-pending": "Celkový zůstatek",
     "total-purchases": "Total compras",
     "total-sales": "Total ventas",
     "total-value-error": "Valor total de %docType% %docCode% incorrecto (%docTotal%). Valor correcto: %calcTotal%",
@@ -1561,7 +1574,7 @@
     "town": "Población",
     "tracking-code": "Código seguimiento",
     "transfer": "Transferencia",
-    "transfers": "Převody",
+    "transfers": "Převedení",
     "transfers-stock": "Transferencias de stock",
     "translation": "Traducción",
     "translations": "Traducciones",
@@ -1601,9 +1614,10 @@
     "update-supplier-prices": "Actualizar precios de proveedores",
     "update-time": "Hora de actualización",
     "updated-model": "Actualizado %model% (%key%) %desc%",
+    "updated-records": "Bylo aktualizováno %updatedRecords% záznamů z %totalRecords%",
     "updater": "Actualizador",
-    "updates-available": "Aktualizace jsou k dispozici",
-    "updates-available-p": "Jsou k dispozici aktualizace pro FacturaScripts. Prosím, klikněte na aktualizátor a stáhněte si novou verzi. Aktualizace opravují chyby a přidávají nové funkce.",
+    "updates-available": "Dostupné aktualizace",
+    "updates-available-p": "Jsou k dispozici aktualizace pro FacturaScripts. Prosím, klikněte na aktuátor a stáhněte si novou verzi. Aktualizace opravují chyby a přidávají nové funkce.",
     "updating-attached-relations": "Aktualizace připojených vazeb",
     "upload-file": "Subir archivo",
     "uploaded-at": "Cargado en",
@@ -1651,6 +1665,7 @@
     "warehouses": "Almacenes",
     "warning": "Atención",
     "warnings": "Avisos",
+    "weak-password": "Heslo musí obsahovat alespoň 8 znaků, čísla a písmena.",
     "web": "Web",
     "website": "Web",
     "wednesday": "Miércoles",
@@ -1692,6 +1707,7 @@
     "you-should-change-passwd": "Debería cambiar su contraseña",
     "your": "Suyo",
     "zip-code": "Código Postal",
-    "zip-codes": "PSČ",
-    "zip-error-wrong-structure": "La estructura del zip es incorrecta. Debe contener la carpeta del plugin y solamente un plugin."
+    "zip-codes": "Poštovní směrovací čísla",
+    "zip-error-wrong-structure": "La estructura del zip es incorrecta. Debe contener la carpeta del plugin y solamente un plugin.",
+    "zone": "Zóna"
 }
