--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -56,6 +56,7 @@
     "add-file": "Afegir fitxer",
     "add-invoices": "Afegir factures",
     "add-new-plugin": "Afegir un nou complement",
+    "add-user": "Afegir usuari",
     "additional-text": "Text adicional",
     "address": "Direcció",
     "addresses": "Direccions",
@@ -212,6 +213,7 @@
     "card": "Targeta",
     "carrier": "Transportiste",
     "carriers": "Transportistes",
+    "cart": "Cistella",
     "cash": "Efectiu",
     "categories": "Categorias",
     "category": "Categoría",
@@ -279,8 +281,10 @@
     "companies": "Empreses",
     "company": "Empresa",
     "company-commission-info": "Només s'aplicarà a l'empresa seleccionada",
+    "company-iban-changed": "S'ha canviat l'iban del compte bancari %account%. Abans era %old% i ara és %new%",
     "company-manager": "Administrador de l'empresa",
     "company-name": "Nom de l'empresa",
+    "company-tax": "Impost de societats",
     "company-warehouse": "Empresa\/Magatzem",
     "comparative": "Comparatiu",
     "compared": "Comparat",
@@ -503,7 +507,7 @@
     "email": "Correu electrònic",
     "email-bcc": "Email en Còpia Oculta",
     "email-cc": "Email en còpia",
-    "email-not-configured": "El correu electrònic no està configurat",
+    "email-not-configured": "El correu electrònic no està configurat. Podeu configurar el correu electrònic des del menú administrador, correu electrònic.",
     "email-not-sent": "No s'ha enviat",
     "email-notification": "Notificació per correu electrònic",
     "email-notification-disabled": "La notificació de correu electrònic %name% està desactivada",
@@ -528,6 +532,7 @@
     "enabled-plugins": "Connectors actius",
     "encrypt": "Sifrar",
     "end-date": "Data de fi",
+    "end-month": "Mes de finalització",
     "end-time": "Hora de finalització",
     "epigraph": "Grup contable",
     "epigraph-group": "Grup d'epìgraf",
@@ -620,6 +625,7 @@
     "filecache-get-key-item": "L'element '%item%' s'ha obtés de Filecache.",
     "filecache-set-key-item": "L'element '%item%' s'ha fixat en Filecache.",
     "files": "Fitxers",
+    "filter": "Filtrar",
     "filter-method": "Método del filtre",
     "filter-records-containing-indicated-value": "Filtrar els registres que contenen el valor indicat",
     "filters": "Filtres",
@@ -929,6 +935,7 @@
     "manufacturer": "Fabricant",
     "manufacturer-code": "Codi del fabricant",
     "manufacturers": "Fabricants",
+    "manufacturing": "Fabricació",
     "march": "Març",
     "margin": "Marge",
     "margin-top": "Marge superior",
@@ -1122,6 +1129,7 @@
     "payment-method": "Forma de pagament",
     "payment-methods": "Formes de pagament",
     "payments": "Pagaments",
+    "paypal": "PayPal",
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "% de recàrrec",
@@ -1197,6 +1205,7 @@
     "print-list-of-records": "Imprimix el llistat de registres",
     "print-price": "Imprimir preus",
     "print-quantity": "I",
+    "print-ticket": "Print ticket",
     "printed": "Imprès",
     "printing-format": "Format d'impressió",
     "printing-formats": "Formats d'impressió",
@@ -1323,6 +1332,7 @@
     "rules": "Regles",
     "run": "run",
     "running-plugin-cron": "S'està eixecutant el cron del plugin %pluginName%",
+    "running-work-queue": "Executant la cua d'esdeveniments de treball",
     "sales": "Vendes",
     "sales-invoice": "Factura de venda",
     "sales-rate": "Taxa de vendes",
@@ -1427,6 +1437,7 @@
     "start": "Inicio",
     "start-date": "Data d'inici",
     "start-hour": "Hora d'inici",
+    "start-month": "Mes d'inici",
     "start-time": "Hora d'inici",
     "starting-cron": "Escomençant l'eixecució del cron de FacturaScripts...",
     "state": "Estat",
@@ -1478,6 +1489,7 @@
     "supplier-estimation": "Presupost del proveïdor",
     "supplier-estimations": "Presuposts dels proveïdors",
     "supplier-have-no-iban": "El proveïdor %%supplier no té IBAN (compte bancària)",
+    "supplier-iban-changed": "S'ha canviat l'iban del compte bancari del proveïdor %codproveedor%. Abans era %old% i ara és %new%",
     "supplier-invoice": "Factura del proveïdor",
     "supplier-invoice-deleted-successfully": "La factura de compra %docCode% s'ha borrat correctament.",
     "supplier-invoices": "Factures dels Proveïdors",
@@ -1550,6 +1562,7 @@
     "total": "Total",
     "total-amount": "Suma total",
     "total-cost": "total-cost",
+    "total-pending": "Total pendent",
     "total-purchases": "total-purchases",
     "total-sales": "total-sales",
     "total-value-error": "La cantitat total en %docType% %docCode% és incorrecta (%docTotal%). La cantitat correcta és: %calcTotal%",
@@ -1601,6 +1614,7 @@
     "update-supplier-prices": "update-supplier-prices",
     "update-time": "Hora de l'actualització",
     "updated-model": "Actualizado %model% (%key%) %desc%",
+    "updated-records": "S'han actualitzat %updatedRecords% registres de %totalRecords%",
     "updater": "Actualitzador",
     "updates-available": "Actualitzacions disponibles",
     "updates-available-p": "Hi ha actualitzacions disponibles de FacturaScripts. Si us plau, feu clic a l'actualitzador i descarregueu la nova versió. Les actualitzacions corregeixen fallades i afegeixen noves funcions.",
@@ -1651,6 +1665,7 @@
     "warehouses": "Almagasens",
     "warning": "Atenció",
     "warnings": "Advertiments",
+    "weak-password": "La contrasenya ha de tindre almenys 8 caràcters, amb números i lletres.",
     "web": "Web",
     "website": "Lloc web",
     "wednesday": "wednesday",
@@ -1693,5 +1708,6 @@
     "your": "seu",
     "zip-code": "Codi postal",
     "zip-codes": "Codis postals",
-    "zip-error-wrong-structure": "L'estructura del zip és incorrecta. Deu contindre la carpeta del complement i només un complement."
+    "zip-error-wrong-structure": "L'estructura del zip és incorrecta. Deu contindre la carpeta del complement i només un complement.",
+    "zone": "Zona"
 }
